--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "scripts": {
         "start": "node server.js"
     },
+    "type": "module",
     "dependencies": {
+        "@walletconnect/client": "^1.8.0",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "ethers": "^6.13.5",
         "express": "^4.18.2",
-        "mongoose": "^7.2.1",
         "node-telegram-bot-api": "^0.61.0",
         "pg": "^8.13.1"
     }
